--- a/XAEnglishProject/XAEnglishProject/Base.lproj/Main.storyboard
+++ b/XAEnglishProject/XAEnglishProject/Base.lproj/Main.storyboard
@@ -379,7 +379,7 @@
                                 <rect key="frame" x="0.0" y="64" width="1024" height="655"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person_avatar.png" id="phs-ef-NKH">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person_avatar.png" id="phs-ef-NKH">
                                 <rect key="frame" x="445" y="98" width="134" height="134"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -544,11 +544,11 @@
             </objects>
             <point key="canvasLocation" x="-1006" y="586"/>
         </scene>
-        <!--Customer Navigation View Controller - 我的客户-->
+        <!--Customer Navigation View Controller-->
         <scene sceneID="29N-Be-UMf">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dFx-Sj-nIW" customClass="CustomerNavigationViewController" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="我的客户" image="tab1_S.png" id="BBu-c4-d1m"/>
+                    <tabBarItem key="tabBarItem" title="" image="tab1_S.png" id="BBu-c4-d1m"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ETb-97-Zv5">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
@@ -568,11 +568,11 @@
             </objects>
             <point key="canvasLocation" x="297" y="229"/>
         </scene>
-        <!--Personal Navigation View Controller - 个人中心-->
+        <!--Personal Navigation View Controller-->
         <scene sceneID="YQN-ak-h9M">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="X70-Zf-wXD" customClass="PersonalNavigationViewController" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="个人中心" image="tab1_S.png" id="Jhj-IN-M1r"/>
+                    <tabBarItem key="tabBarItem" title="" image="tab2_S.png" id="Jhj-IN-M1r"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="oFV-qO-9u3">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
@@ -607,7 +607,8 @@
         <image name="person_avatar.png" width="138" height="138"/>
         <image name="person_background.png" width="1280" height="591"/>
         <image name="person_line.png" width="352" height="1"/>
-        <image name="tab1_S.png" width="19" height="14"/>
+        <image name="tab1_S.png" width="35" height="30"/>
+        <image name="tab2_S.png" width="35" height="37"/>
         <image name="xa.png" width="358" height="111"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
