--- a/XAEnglishProject/ui/VideoForModel.xib
+++ b/XAEnglishProject/ui/VideoForModel.xib
@@ -35,6 +35,10 @@
                     <color key="textColor" red="0.41568627450000001" green="0.41568627450000001" blue="0.41568627450000001" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="beginvideo.png" id="gq8-Ma-aKq">
+                    <rect key="frame" x="462" y="137" width="76" height="76"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <connections>
@@ -45,4 +49,7 @@
             </connections>
         </view>
     </objects>
+    <resources>
+        <image name="beginvideo.png" width="76" height="76"/>
+    </resources>
 </document>
