--- a/XAEnglishProject/ui/ModelCell.xib
+++ b/XAEnglishProject/ui/ModelCell.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -41,11 +40,21 @@
                             <action selector="rightButtonClick:" destination="VMt-tZ-PiJ" eventType="touchUpInside" id="DV9-x8-xGO"/>
                         </connections>
                     </button>
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9V0-pJ-esG">
+                        <rect key="frame" x="261" y="8" width="57" height="25"/>
+                        <state key="normal" image="delete.png">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="deleteButtonClick:" destination="VMt-tZ-PiJ" eventType="touchUpInside" id="qzc-aV-cge"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <size key="customSize" width="180" height="136"/>
             <connections>
+                <outlet property="deleteButton" destination="9V0-pJ-esG" id="oaa-9J-l9w"/>
                 <outlet property="modelImageView" destination="geK-vx-DBB" id="TRZ-tT-PeV"/>
                 <outlet property="modelTitleLabel" destination="dts-4c-gc3" id="gqn-CK-Xjq"/>
                 <outlet property="rightButtom" destination="CUS-ol-eNE" id="Kks-bt-97u"/>
@@ -54,6 +63,7 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="delete.png" width="57" height="25"/>
         <image name="right_normal.png" width="54" height="54"/>
         <image name="right_select.png" width="54" height="54"/>
     </resources>
